--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fileverse-dev/md2slides",
-  "private": true,
+  "private": false,
   "version": "0.0.1",
   "main": "dist/index.es.js",
   "module": "dist/index.es.js",
