--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "@fileverse-dev/md2slides",
   "private": false,
-  "version": "0.0.1",
+  "version": "0.0.2",
   "main": "dist/index.es.js",
   "module": "dist/index.es.js",
-  "type": "module",
   "exports": {
     ".": {
-      "require": "./dist/index.es.js",
-      "import": "./dist/index.es.js"
+      "import": "./dist/index.es.js",
+      "types": "./dist/src/convert-markdown.d.ts"
     },
     "./types": "./dist/src/convert-markdown.d.ts"
   },
