--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,9 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "typeRoots": ["./dist/src/convert-markdown.d.ts"]
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["public"],
+  "references": [{ "path": "./tsconfig.node.json" }]
 }
