--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "@fileverse-dev/md2slides",
   "private": false,
-  "version": "0.0.2",
+  "version": "0.0.3",
   "main": "dist/index.es.js",
   "module": "dist/index.es.js",
+  "type": "module",
   "exports": {
     ".": {
       "import": "./dist/index.es.js",
       "types": "./dist/src/convert-markdown.d.ts"
     },
+    "./styles": "./dist/md2slides.css",
     "./types": "./dist/src/convert-markdown.d.ts"
   },
   "files": [
