--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     "noFallthroughCasesInSwitch": true,
     "typeRoots": ["./dist/src/convert-markdown.d.ts"]
   },
-  "include": ["src"],
+  "include": ["src/**/*"],
   "exclude": ["public"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
